@@ -1,11 +1,13 @@
 package space.space_spring.domain.pay.adapter.in.web.readRequestedPayList;
 
+import lombok.Getter;
 import space.space_spring.domain.pay.application.port.in.readRequestedPayList.InfoOfRequestedPay;
 import space.space_spring.domain.pay.application.port.in.readRequestedPayList.ResultOfReadRequestedPayList;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Getter
 public class ResponseOfReadRequestedPayList {
 
     private List<ResponseOfRequestedPayInfo> completeRequestedPayList;
@@ -15,11 +17,11 @@ public class ResponseOfReadRequestedPayList {
     private ResponseOfReadRequestedPayList(List<InfoOfRequestedPay> completeRequestedPayList, List<InfoOfRequestedPay> inCompleteRequestedPayList) {
         this.completeRequestedPayList = completeRequestedPayList.stream()
                 .map(ResponseOfRequestedPayInfo::of)
-                .collect(Collectors.toList());
+                .toList();
 
         this.inCompleteRequestedPayList = inCompleteRequestedPayList.stream()
                 .map(ResponseOfRequestedPayInfo::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static ResponseOfReadRequestedPayList of(ResultOfReadRequestedPayList result) {
